--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "sentiment-analysis-react",
+  "homepage": "https://gyananshu07.github.io/sentiment-analysis-react",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -9,6 +10,7 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
+    "sentiment": "^5.0.2",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
@@ -34,5 +36,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "gh-pages": "^3.2.3"
   }
 }
